LU-1128 ldlm: ldlm pools shrinker cleanup

For ldlm server pool shrinker, we just use it to decrease SLV,
but never reclaim any memory directly, so it should always return
-1 to inform the kernel to break the shrink loop.

For ldlm client pool shrinker, we should just return remaining
unused locks as per the kernel's expectation.

The ldlm server pool shrinker should drop SLV to a small enough
value to trigger the lock cancellation from clients, we choose
(granted_locks * 100) in this patch.

Signed-off-by: Niu Yawei <niu@whamcloud.com>
Change-Id: I17f51ac84eb0b8c70b2cee9ac7eeca34647c1990